# fluka-grid-search

./: .gitignore  .gitmodules  2026-01-23_Frascati_V1.inp  README.md  config.yaml  conftest.py  pyproject.toml  run_grid.py  sentinel.py  setup.py
.superpowers/sdd/: progress.md  task-1-report.md  task-2-report.md
docs/: pivot_example.md  plan.md
docs/superpowers/plans/: 2026-05-21-fluka-grid-search.md  2026-05-22-isotope-analysis.md  2026-05-22-isotope-pivot-sheet.md  2026-05-22-isotope-summary-sheet.md  2026-05-25-use-dpm-flag.md  2026-06-15-flukaqueuesub-integration.md  2026-06-22-fluka-isotope-analysis.md  2026-06-24-dpm-launch-option.md
docs/superpowers/specs/: 2026-05-21-fluka-grid-search-design.md  2026-05-22-isotope-analysis-design.md  2026-05-22-isotope-pivot-sheet-design.md  2026-05-22-isotope-summary-sheet-design.md  2026-05-25-use-dpm-flag-design.md  2026-06-15-flukaqueuesub-integration-design.md  2026-06-22-fluka-isotope-analysis-design.md  2026-06-24-dpm-launch-option-design.md
examples/: config.yaml  config_slurm.yaml
grid_search/: config.py  grid.py  grid_isotope.py  isotope_analysis.py  postprocess.py  resnuclei.py  seeds.py  state.py  workspace.py
grid_search/backends/: base.py  queue_adapter.py  task_spooler.py
tests/: test_config.py  test_grid.py  test_isotope_analysis.py  test_postprocess.py  test_resnuclei.py  test_run_grid.py  test_sentinel.py  test_state.py  test_task_spooler.py  test_workspace.py
